# pythonic_project

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
src/python_project/: __init__.py  cmdline.py  counter.py  log.py
src/python_project/config/: __init__.py  settings.yml
tests/: conftest.py  test_cmdline.py  test_log.py  test_version.py  test_wordcount.py
