[tool.poetry]
name = "python_project"
version = "0.1.0"
description = "My Awesome Project!"
readme = "README.md"
authors = ["zengjunjie <zengjunjie1026@163.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.9"
dynaconf = "^3.1.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
isort = "^5.10.1"
pytest = "^7.1.2"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.1"

[tool.poetry.plugins."scripts"]
python_project = "python_project.cmdline:main"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins.console_scripts]
word_count = "python_project.cmdline:main"
